<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E9E9"
    tools:context=".Details">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentDescription"
                android:scaleType="centerCrop"></ImageView>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/icons8_left_24"
                app:popupTheme="@style/AppTheme.AppBarOverlay"
                app:title="@string/personname"
                app:subtitleTextAppearance="@string/title_activity_details"/>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:tint="#FFB701"
        app:backgroundTint="#FFFFFF"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_star_border_white_24dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="380dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="235dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:text="@string/personname"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="45dp"
            android:background="#f5f5f5" />

        <TextView
            android:id="@+id/lieu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:drawablePadding="20dp"
            android:layout_marginTop="60dp"
            android:drawableStart="@drawable/baseline_location_on_black_18dp"
            android:text="@string/lieu"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/phone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:drawablePadding="20dp"
            android:layout_marginTop="100dp"
            android:drawableStart="@drawable/baseline_call_black_18dp"
            android:text="@string/phone"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reseau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:drawablePadding="20dp"
            android:layout_marginTop="140dp"
            android:drawableStart="@drawable/internet"
            android:text="@string/fb"
            android:textSize="18sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card2"
        android:layout_width="380dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="440dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="25sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="45dp"
            android:background="#f5f5f5" />

        <TextView
            android:id="@+id/lieu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/apropostext"
            android:textSize="18sp" />

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>